Fix broken css so that the proper font styling is applied to the nav links.

--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,9 @@
   padding: 1rem 20rem;
 }
 
-.header-area .main-menu .nav-item .nav-link {
+.header-area .main-menu .nav-link {
   text-transform: uppercase;
   font-weight: 500;
   padding: 1.7rem;
-  color: black;
+  color: var(--title-color);
 }
